--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -26,4 +26,8 @@
     <string name="quick_settings_slim_floats_on">Slim Float Mode Enabled</string>
     <string name="quick_settings_slim_floats_off">Slim Float Mode Disabled</string>
 
+    <!-- The text for the button in the notification window-shade that clears
+         all of the currently visible notifications. [CHAR LIMIT=10]-->
+    <string name="clear_recents">Close all recent</string>
+
 </resources>
