Frameworks: Lockscreen blur fix & tweak
Immutable bitmap was passed to renderscript.
I'm really curious why this code worked before android 6.0.

Added alternative way to blur lockscreen for devices with renderscript problem.
Grabbed blur code from https://github.com/kikoso/android-stackblur

Moved all blur related code to Blur.java

Change-Id: Id0ddadeb322508ae6fd279a8a243af40d87fd19a

--- a/core/res/res/values/cm_symbols.xml
+++ b/core/res/res/values/cm_symbols.xml
@@ -157,4 +157,7 @@
 
     <!-- Usb drive persistent notification -->
     <java-symbol type="bool" name="config_persistUsbDriveNotification" />
+
+    <!-- Use alternative way to blur lockscreen -->
+    <java-symbol type="bool" name="config_use_stackblur" />
 </resources>
